--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,86 +1,190 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.container{
-    background-color: #a7bcff;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    .formWrapper{
+  .formWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 20px 40px;
+    border-radius: 10px;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      input {
+        padding: 10px;
+        border: none;
+        border-bottom: 1px solid lightgray;
+        outline: none;
+        width: 250px;
+        font-size: 18px;
+        color: #5d5b8d;
+
+        &::placeholder {
+          color: rgb(175, 175, 175);
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
+
+      label {
+        display: flex;
+        align-items: center;
+        margin: auto;
+
+        img {
+          height: 30px;
+          margin-right: 10px;
+        }
+
+        span {
+          color: darkgray;
+          font-size: 18px;
+        }
+      }
+
+      button {
+        width: fit-content;
+        padding: 10px 20px;
+        margin: 10px auto 0;
+        border: none;
+        border-radius: 5px;
+        background: #5d5b8d;
+        color: white;
+        font-size: 18px;
+      }
+    }
+
+    p {
+      color: #5d5b8d;
+      margin-top: 10px;
+    }
+
+    h3 {
+      color: #5d5b8d;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+
+    h5 {
+      color: #5d5b8d;
+      margin-bottom: 25px;
+      font-weight: 300;
+    }
+  }
+
+  .box {
+    width: 80%;
+    height: 75%;
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+
+    .col1 {
+      flex: 1;
+      background-color: #3e3c61;
+
+      .heading {
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 10px;
+        align-items: center;
+        background-color: #2f2d52;
+        color: white;
+
+        span {
+          font-size: 16px;
+          font-weight: 400;
+        }
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          img {
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          span {
+            font-size: 14px;
+          }
+
+          button {
+            width: fit-content;
+            border: none;
+            border-radius: 5px;
+            background: #5d5b8d;
+            color: white;
+            font-size: 14px;
+            padding: 5px;
+          }
+        }
+      }
+
+      input{
+        width: 100%;
+        height: 40px;
+        background: transparent;
+
+        &::placeholder{
+            padding-left: 10px;
+            font-weight: 400;
+            font-size: 14px;
+            color: rgb(160, 160, 160);
+        }
+      }
+
+      .recentChat{
         display: flex;
         flex-direction: column;
-        align-items: center;
-        background-color: white;
-        padding: 20px 40px;
-        border-radius: 10px;
 
-        form{
+        div{
+            height: 50px;
+            padding: 5px;
             display: flex;
-            flex-direction: column;
-            gap: 10px;
-
-            input{
-                padding: 10px;
-                border: none;
-                border-bottom: 1px solid lightgray;
-                outline: none;
-                width: 250px;
-                font-size: 18px;
-                color: #5d5b8d;
-
-                &::placeholder{
-                    color: rgb(175, 175, 175);
-                    font-size: 16px;
-                    font-weight: 500;
-                }
-            }
-
-            label{
-                display: flex;
-                align-items: center;
-                margin: auto;
-
-                img{
-                    height: 30px;
-                    margin-right: 10px;
-                }
-
-                span{
-                    color: darkgray;
-                    font-size: 18px;
-                }
-            }
-
-            button{
-                width: fit-content;
-                padding: 10px 20px;
-                margin: 10px auto 0;
-                border: 1px solid #5d5b8d;
-                border-radius: 5px;
-                background: transparent;
-            }
+            align-items: center;
+            gap: 5px;
         }
 
-        p{
-            color: #5d5b8d;
-            margin-top: 10px;
+        div:hover{
+            background-color: #2f2d52;
         }
 
-        h3{
-            color: #5d5b8d;
-            margin-bottom: 10px;
+        img{
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        span{
+            color: white;
             font-weight: 700;
         }
-
-        h5{
-            color: #5d5b8d;
-            margin-bottom: 25px;
-            font-weight: 300;
-        }
+      }
     }
+
+    .col2 {
+      flex: 2;
+      background-color: #ddddf7;
+    }
+  }
 }
