--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,17 @@
   box-sizing: border-box;
 }
 
+@mixin btn {
+  width: fit-content;
+  padding: 10px 20px;
+  margin: 10px auto 0;
+  border: none;
+  border-radius: 5px;
+  background: #5d5b8d;
+  color: white;
+  font-size: 18px;
+}
+
 .container {
   background-color: #a7bcff;
   height: 100vh;
@@ -57,14 +68,7 @@
       }
 
       button {
-        width: fit-content;
-        padding: 10px 20px;
-        margin: 10px auto 0;
-        border: none;
-        border-radius: 5px;
-        background: #5d5b8d;
-        color: white;
-        font-size: 18px;
+        @include btn;
       }
     }
 
@@ -128,56 +132,55 @@
           }
 
           button {
-            width: fit-content;
-            border: none;
-            border-radius: 5px;
-            background: #5d5b8d;
-            color: white;
-            font-size: 14px;
+            @include btn;
+
+            font-size: 12px;
             padding: 5px;
+            margin: 0;
           }
         }
       }
 
-      input{
+      input {
         width: 100%;
         height: 40px;
         background: transparent;
+        color: white;
+        padding: 0 10px;
 
-        &::placeholder{
-            padding-left: 10px;
-            font-weight: 400;
-            font-size: 14px;
-            color: rgb(160, 160, 160);
+        &::placeholder {
+          font-weight: 400;
+          font-size: 14px;
+          color: rgb(160, 160, 160);
         }
       }
 
-      .recentChat{
+      .recentChat {
         display: flex;
         flex-direction: column;
 
-        div{
-            height: 50px;
-            padding: 5px;
-            display: flex;
-            align-items: center;
-            gap: 5px;
+        div {
+          height: 50px;
+          padding: 5px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
         }
 
-        div:hover{
-            background-color: #2f2d52;
+        div:hover {
+          background-color: #2f2d52;
         }
 
-        img{
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
-            object-fit: cover;
+        img {
+          width: 35px;
+          height: 35px;
+          border-radius: 50%;
+          object-fit: cover;
         }
 
-        span{
-            color: white;
-            font-weight: 700;
+        span {
+          color: white;
+          font-weight: 700;
         }
       }
     }
@@ -185,6 +188,126 @@
     .col2 {
       flex: 2;
       background-color: #ddddf7;
+      .chat {
+        height: 100%;
+        .head {
+          width: 100%;
+          height: 50px;
+          background-color: #3e3c61;
+          color: white;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 10px;
+
+          .menu {
+            display: flex;
+            gap: 10px;
+
+            img {
+              width: 25px;
+              height: 25px;
+            }
+          }
+        }
+      }
+      .messages {
+        width: 100%;
+        height: calc(100% - 100px);
+        display: flex;
+        flex-direction: column;
+        overflow: scroll;
+
+        .msg {
+          display: flex;
+          margin: 10px;
+          gap: 10px;
+
+          .msgDetails {
+            display: flex;
+            flex-direction: column;
+
+            img {
+              width: 35px;
+              height: 35px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+
+            span {
+              font-size: 14px;
+              color: rgb(140, 140, 140);
+            }
+          }
+
+          .msgContent {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            max-width: 80%;
+            height: fit-content;
+            img {
+              width: 50%;
+            }
+            span {
+              max-width: fit-content;
+              font-size: 14px;
+              padding: 8px;
+              background-color: white;
+              border-radius: 0 10px 10px 10px;
+            }
+          }
+          &.owner {
+            flex-direction: row-reverse;
+
+            .msgContent {
+              align-items: flex-end;
+              span {
+                background-color: #8da4f1;
+                color: white;
+                border-radius: 10px 0px 10px 10px;
+              }
+            }
+          }
+        }
+      }
+      .send {
+        width: 100%;
+        height: 50px;
+        background-color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+
+        input {
+          border: none;
+          outline: none;
+          font-size: 18px;
+
+          &::placeholder {
+            font-size: 16px;
+          }
+        }
+
+        div {
+          display: flex;
+          gap: 5px;
+          align-items: center;
+
+          img {
+            width: 20px;
+            height: 20px;
+          }
+        }
+
+        button {
+          @include btn;
+
+          margin: 0 0 0 8px;
+          font-size: 14px;
+        }
+      }
     }
   }
 }
