--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,22 +165,38 @@
           display: flex;
           align-items: center;
           gap: 5px;
+          overflow: hidden;
+
+          img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          .userChatInfo {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 2px;
+            span {
+              color: white;
+              font-size: 16px;
+              font-weight: 700;
+            }
+            p {
+              color: lightgray;
+              font-size: 14px;
+              width: 200px;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+          }
         }
 
         div:hover {
           background-color: #2f2d52;
-        }
-
-        img {
-          width: 35px;
-          height: 35px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-
-        span {
-          color: white;
-          font-weight: 700;
         }
       }
     }
@@ -211,7 +227,7 @@
           }
         }
       }
-      .messages {
+      .message {
         width: 100%;
         height: calc(100% - 100px);
         display: flex;
